[tool.poetry]
name = "blockchain"
version = "0.1.0"
description = ""
authors = ["Jerry Qu <jerry2001qu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rsa = "^4.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
